# BeAMF

./: .buildinfo  BeAMF.py  BeAMF_albedo.py  BeAMF_bc.py  BeAMF_calculation.py  BeAMF_master.py  BeAMF_profile.py  BeAMF_terrainheight.py  LICENSE.txt  MANIFEST.in  README.md  example.json  genindex.html  index.html  main.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.doctrees/: environment.pickle  index.doctree  main.doctree  usage.doctree
.github/workflows/: documentation.yaml
BeAMF/: BeAMF.py  BeAMF_albedo.py  BeAMF_bc.py  BeAMF_calculation.py  BeAMF_function.py  BeAMF_master.py  BeAMF_output.py  BeAMF_profile.py  BeAMF_terrainheight.py  __init__.py  albedo.py  bc.py  calculation.py  example.json  master.py  output.py  profile.py  terrainheight.py
_sources/: main.rst.txt  usage.rst.txt
_static/: documentation_options.js
doc/: conf.py  index.rst  main.rst
doc/custom/css/: my_theme.css
