[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "BeAMF/_version.py"

[project]
name = "BeAMF" 
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
				 "numpy",
				 "scipy",
				 "netCDF4",
				 "datetime",
				"matplotlib"
					]

[project.scripts]
beamf = "BeAMF:cml"
