# [metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
# license_files = LICENSE.txt

[metadata]     
name = BeAMF

[options]
include_package_data = True

# [options]
# package_dir=
#     =BeAMF
# packages=find:
[options.entry_points]
console_scripts =
     beamf = BeAMF.BeAMF:cml
 

# [options.packages.find]
# where=BeAMF

[bdist_wheel]
	universal = 1


